[package]
name = "trace_analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
clap = {version = "4.3", features = ["derive"]}
csv = "1.2"
itertools = "0.10"
plotters = "0.3"

[[bin]]
name = "count"
path = "src/bin/count.rs"
